[package]
name = "hunter"
description = "Simple test framework for Corsac Kuafu."
version = "0.1.0"
authors = ["gczhou <3106174238@qq.com>"]
edition = "2018"

[dependencies]
serde = "1.0.79"
serde_json = "1.0.31"
hyper = "0.12.10"
clap = {version = "~2.27.0", features = ["yaml"]}
blockchain_types = { git = "http://zerda:zerda@192.168.2.149:9999/r/rust_corsac_libs/blockchain_types.git", branch="develop"}
ethcore-bigint = { git="http://192.168.2.149:9999/r/rust_corsac_libs/bigint.git", features=["heapsizeof"]}
rcrypto = { git = "http://zerda:zerda@192.168.2.149:9999/r/rust/rcrypto.git"}
rlp = { git="http://192.168.2.149:9999/r/rust_corsac_libs/rlp.git"}
yaml-rust = "0.4.2"
